<resources>
    <string name="app_name">android-room</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcomeString">"Welcome %1$s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_done">Login successful</string>
    <string name="log_out">Log out</string>
    <string name="created">Created:</string>
    <string name="change_password">Change password</string>
    <string name="name">Name:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="add_product">Add product</string>
    <string name="description">Description</string>
    <string name="product_name">Product name</string>
    <string name="add_product_to_list">Add to List</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="display_name">Display name</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_new_list">Add new List</string>
    <string name="manage_lists">Manage lists</string>
    <string name="accountLogin">Name: %1$s</string>
    <string name="products">Products:</string>
    <string name="list_name">List name</string>
    <string name="your_lists">Your lists:</string>
    <string name="pick_a_user">Pick a user</string>
    <string name="pick_a_list">Pick a List</string>
    <string name="share">Share</string>
    <string name="username">username</string>
    <string name="share_with">Share with:</string>
    <string name="settings_wheel">Settings wheel</string>
    <string name="share_button">Share button</string>
    <string name="manage_lists_button">New list button</string>
    <string name="list_owner_string">Owner: %1$s</string>
    <string name="list_name_string">Name: %1$s</string>
    <string name="list_created_date_string">Created: %1$s</string>
    <string name="items">Items:</string>
    <string name="add_products_to_list">Add products to list</string>
    <string name="select_products">Select products</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="create_list">Create List</string>
    <string name="add_new_list_button">add_new_list_button</string>
    <string name="go_to_products_button">go_to_products_button</string>
    <string name="account">Account</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_id">Sort by ID</string>
    <string name="shared_lists">Shared lists:</string>
    <string name="synchronize">Synchronize</string>
</resources>