<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/add_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_new_list"
        app:layout_constraintEnd_toEndOf="@+id/to_new_list_button"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="@+id/to_new_list_button"
        app:layout_constraintTop_toBottomOf="@+id/to_new_list_button" />

    <TextView
        android:id="@+id/to_products_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        app:layout_constraintEnd_toEndOf="@+id/to_products_button"
        app:layout_constraintStart_toStartOf="@+id/to_products_button"
        app:layout_constraintTop_toBottomOf="@+id/to_products_button" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/welcomeString"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/settings_wheel"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/to_products_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_products_button"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/ic_baseline_person_outline_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingLists"
        android:layout_width="357dp"
        android:layout_height="384dp"
        android:layout_margin="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:listitem="@layout/list_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_products_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/go_to_products_button"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_new_list_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/add_new_list_button"
        app:layout_constraintBottom_toTopOf="@+id/to_products_text"
        app:layout_constraintEnd_toStartOf="@+id/to_products_button"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        app:layout_constraintEnd_toEndOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="@+id/settingsButton"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />

    <ImageButton
        android:id="@+id/sortByAlphaButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/shoppingLists"
        app:layout_constraintTop_toBottomOf="@+id/shoppingLists"
        app:srcCompat="@drawable/ic_baseline_sort_by_alpha_24"
        android:contentDescription="@string/sort_alphabetically" />

    <ImageButton
        android:id="@+id/sortByIDButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/sortByAlphaButton"
        app:layout_constraintTop_toBottomOf="@+id/shoppingLists"
        app:srcCompat="@drawable/ic_baseline_sort_24"
        android:contentDescription="@string/sort_by_id" />

</androidx.constraintlayout.widget.ConstraintLayout>