<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.list.ListActivity">


    <TextView
        android:id="@+id/text_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productListView"
        android:layout_width="324dp"
        android:layout_height="74dp"

        android:layout_marginTop="8dp"
        android:background="#488F8F8F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_products"
        tools:itemCount="8"
        tools:listitem="@layout/product_data" />

    <Button
        android:id="@+id/goToProductActivity"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_product"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productListView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingListsView"
        android:layout_width="346dp"
        android:layout_height="87dp"
        android:layout_marginBottom="32dp"
        android:background="#478F8F8F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/list_data" />

    <Button
        android:id="@+id/new_list_button"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_new_list"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/new_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/list_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text_lists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/your_lists"
        app:layout_constraintBottom_toTopOf="@+id/shoppingListsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>